// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     expense
    s
     totalling $
    94.34
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with no expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     expense
    s
     totalling $
    0
  </h3>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     expense
     totalling $
    23.45
  </h3>
</div>
`;
